Fixes autocomplete breaking out of container

--- a/core/themes/claro/css/components/views-exposed-form.css
+++ b/core/themes/claro/css/components/views-exposed-form.css
@@ -42,6 +42,7 @@
 
 .views-exposed-form__item.views-exposed-form__item {
   margin: 0.75rem 0.5rem 0 0; /* LTR */
+  max-width: 100%;
 }
 
 [dir="rtl"] .views-exposed-form__item.views-exposed-form__item {
