--- a/core/themes/claro/css/components/views-exposed-form.pcss.css
+++ b/core/themes/claro/css/components/views-exposed-form.pcss.css
@@ -36,6 +36,7 @@
 
 .views-exposed-form__item.views-exposed-form__item {
   margin: var(--space-s) var(--space-xs) 0 0; /* LTR */
+  max-width: 100%;
 }
 [dir="rtl"] .views-exposed-form__item.views-exposed-form__item {
   margin-right: 0;
